--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -30,7 +30,7 @@
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
       "callToActionMode": "button",
       "callToActionText": "Go to Collection",
-      "textAlignment": "center"
+      "textAlignment": "left"
     }
   }
 }
