--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -14,7 +14,7 @@
   "flex-layout.col#right": {
     "props": {
       "verticalAlign": "middle",
-      "preventVerticalStretch": false
+      "preventVerticalStretch": true
     },
     "children": ["product-name", "product-price", "buy-button"]
   }
