--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -35,7 +35,7 @@
   },
   "sku-selector": {
     "props": {
-      "InitialSelection": "empty",
+      "initialSelection": "empty",
       "showValueNameForImageVariation": true,
       "showVariationsErrorMessage": true
     }
