--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -43,7 +43,7 @@
   "tab-list.item#home2": {
     "props": {
       "tabId": "electronics",
-      "label": "Electronics"
+      "label": "Instagram"
     }
   },
   "tab-content#home": {
@@ -54,7 +54,7 @@
     "props": { "tabId": "majorAppliances" }
   },
   "tab-content.item#home2": {
-    "children": ["rich-text#home2"],
+    "children": ["iframe#home2"],
     "props": { "tabId": "electronics" }
   },
   "rich-text#home1": {
@@ -63,11 +63,11 @@
       "textPosition": "CENTER"
     }
   },
-  "rich-text#home2": {
+  "iframe#home2": {
     "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
+      "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+      "width": "800px",
+      "heigth": "1000px"
     }
   }
 }
