--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -67,7 +67,7 @@
     "props": {
       "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
       "width": "800px",
-      "heigth": "1000px
+      "heigth": "1000px"
     }
   }
 }
