--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -14,7 +14,7 @@
   "image#landingbanner": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-about-us.png",
-      "maxHeight": "600px"
+      "minWidth": "100%"
     }
   }
 }
