--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -4,11 +4,13 @@
   },
   "search-result-layout.customQuery": {
     "props": {
-      "orderByField": ["OrderByReleaseDateDESC", "OrderByNameDESC"],
-      "hideUnavailableItems": true,
-      "maxItemsPerPage": 8,
-      "queryField": "Blue Top Retro Camera",
-      "mapField": "ft"
+      "querySchema": {
+        "orderByField": ["OrderByReleaseDateDESC"],
+        "hideUnavailableItems": true,
+        "maxItemsPerPage": 8,
+        "queryField": "Blue Top Retro Camera",
+        "mapField": "ft"
+      }
     }
   },
   "image#landingbanner": {
