--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,14 +1,33 @@
 {
+  "header": {
+    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+  },
+  "header.full": {
+    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+  },
+  "header-layout.desktop": {
+    "children": ["header-row#notification", "header-row#main"]
+  },
+  "header-layout.mobile": {
+    "children": [
+      "header-row#notification",
+      "header-row#main-mobile",
+      "header-row#search"
+    ]
+  },
   "header-row#notification": {
     "children": ["header-spacer", "rich-text#header", "header-spacer"]
   },
   "header-row#main": {
     "children": ["logo", "header-spacer", "search-bar", "minicart", "login"],
-    "props": { "inverted": true, "sticky": true, "fullWidth": false }
+    "props": {
+      "inverted": true,
+      "sticky": true,
+      "fullWidth": false
+    }
   },
   "header-row#main-mobile": {
     "children": ["logo", "header-spacer", "minicart", "login"],
-
     "props": {
       "sticky": true,
       "inverted": true
